# ros_robotino

.svn/: entries
robotino_local_move/: CMakeLists.txt  CMakeLists.txt~
robotino_motion/: CMakeLists.txt  mainpage.dox  manifest.xml
robotino_vision/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
robotino_vision/include/: .CameraROS.h.swp  CameraROS.h  FindPuck.h  RobotinoVision.h
robotino_vision/launch/: robotino_vision.launch
robotino_vision/msg/: CameraMode.msg  Lamp.msg  LampPost.msg  LampPostState.msg  LampState.msg  Puck.msg~  PuckState.msg
robotino_vision/msg_gen/cpp/include/robotino_vision/: CameraMode.h  Lamp.h  LampPost.h  LampPostState.h  LampState.h  Puck.h  PuckState.h
robotino_vision/msg_gen/lisp/: CameraMode.lisp  Lamp.lisp  LampPost.lisp  LampPostState.lisp  LampState.lisp  Puck.lisp  PuckState.lisp  _package.lisp  _package_CameraMode.lisp  _package_Lamp.lisp  _package_LampPost.lisp  _package_LampPostState.lisp  _package_LampState.lisp  _package_Puck.lisp  _package_PuckState.lisp  robotino_vision-msg.asd
robotino_vision/src/: CameraROS.cpp  FindPuck.cpp  RobotinoCameraNode.cpp  RobotinoVision.cpp  get_pucks_polar_coordinates_server.cpp  get_pucks_polar_coordinates_server.cpp~  get_pucks_polar_coordinates_server~  robotino_camera_node.cpp  robotino_vision_node.cpp  vision_move_to_puck.cpp
robotino_vision/src/robotino_vision/msg/: _CameraMode.py  _Lamp.py  _LampPost.py  _LampPostState.py  _LampState.py  _Puck.py  _PuckState.py  __init__.py
robotino_vision/src/robotino_vision/srv/: _GetPucks.py  _GetPucksPolarCoordinates.py  __init__.py
robotino_vision/srv/: GetPucks.srv~  GetPucksPolarCoordinates.srv~
robotino_vision/srv_gen/cpp/include/robotino_vision/: GetPucks.h  GetPucksPolarCoordinates.h
robotino_vision/srv_gen/lisp/: GetPucks.lisp  GetPucksPolarCoordinates.lisp  _package.lisp  _package_GetPucks.lisp  _package_GetPucksPolarCoordinates.lisp  robotino_vision-srv.asd
(+330 files in other folders)
